--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,13 @@
 /*universal font*/
 
-nav, #home article, #ux article,#one article, #two article, #three article, #four article {
+nav, #about article, #portfolio article{
   font-family: 'Open Sans', sans-serif;
-  font-weight: 800;
+  font-weight: 300;
   color: white;
 }
 
 nav {
-  background-color: lightgrey;
+  background-color: rgb(42,42,42);
 }
 
 
@@ -16,22 +16,22 @@ nav li {
   display: inline-block;
 }
 
-#home { 
-  background: url("http://placekitten.com/1000/1000") 50% 0 repeat fixed; min-height: 1000px; 
-  height: 1000px; 
+#about { 
+  background-color: rgb(42,42,42); 
+  height: 568px; 
   margin: 0 auto; 
   width: 100%; 
   max-width: 1920px; 
   position: relative; 
 }
  
-#home #profile img {
+#about #myface img {
   max-width: 50%;
   border-radius: 100%;
   
 }
 
-#home article { 
+#about article { 
   height: 458px; 
   position: absolute; 
   text-align: center; 
@@ -39,9 +39,14 @@ nav li {
   width: 100%; 
 }
  
-#ux { 
-  background: url("http://placekitten.com/300/300") 50% 0 repeat fixed; min-height: 1000px; 
-  height: 1000px; 
+ #about article h1 {
+  font-weight: 400;
+font-size: 2.5em;
+ }
+
+#portfolio { 
+  background: url("http://fc04.deviantart.net/fs70/f/2014/053/6/5/free_space_galaxy_texture_by_lyshastra-d77gh18.jpg") 50% 0 repeat fixed; min-height: 568px; 
+  height: 568px; 
   margin: 0 auto; 
   width: 100%; 
   max-width: 1920px;
@@ -50,114 +55,44 @@ nav li {
   box-shadow: 0 0 50px rgba(0,0,0,0.8);
 }
  
-#ux article { 
+#portfolio article { 
   height: 458px; 
   position: absolute; 
   text-align: center; 
   top: 5%; 
   width: 100%; 
-
 }
 
-#ux article ul li { 
-padding-top: 5%;
-
-list-style: none;
-display: inline;
-
+#portfolio article ul li {
+  list-style: none;
+  display: inlin
 }
 
-
-#ux article ul li a { 
-text-decoration: none;
-
+#portfolio article ul li img {
+width: 45%;
+max-width: 400px;
 }
 
-#ux article ul li img, #one img { 
-max-width: 75%;
-float: left;
-}
-
-#one img {
-  float: center;
-  margin: 10px;
-}
-
-#one { 
-  background: url("http://placekitten.com/400/400") 50% 0 repeat fixed; min-height: 1000px; 
-  height: 1000px; 
+#resume {
+  background: url("http://onmyfrontporch.files.wordpress.com/2013/11/texture-8.jpg") 50% 0 repeat fixed; min-height: 568px; 
+  height: 568px; 
   margin: 0 auto; 
   width: 100%; 
   max-width: 1920px; 
   position: relative; 
-  -webkit-box-shadow: 0 0 50px rgba(0,0,0,0.8);
+   -webkit-box-shadow: 0 0 50px rgba(0,0,0,0.8);
   box-shadow: 0 0 50px rgba(0,0,0,0.8);
-  text-align: center;
+
 }
 
-#one article { 
-  height: 458px; 
-  position: absolute; 
-  text-align: center; 
-  top: 150px; 
-  width: 100%; 
-}
-
-#two { 
-  background: url("http://placekitten.com/500/500") 50% 0 repeat fixed; min-height: 1000px; 
-  height: 1000px; 
+#contact {
+   background: url("http://fc04.deviantart.net/fs70/f/2014/053/6/5/free_space_galaxy_texture_by_lyshastra-d77gh18.jpg") 50% 0 repeat fixed; min-height: 568px; 
+  height: 568px; 
   margin: 0 auto; 
   width: 100%; 
   max-width: 1920px; 
   position: relative; 
-  -webkit-box-shadow: 0 0 50px rgba(0,0,0,0.8);
+   -webkit-box-shadow: 0 0 50px rgba(0,0,0,0.8);
   box-shadow: 0 0 50px rgba(0,0,0,0.8);
+
 }
-
-#two article { 
-  height: 458px; 
-  position: absolute; 
-  text-align: center; 
-  top: 150px; 
-  width: 100%; 
-}
-
-#three { 
-  background: url("http://placekitten.com/600/600") 50% 0 repeat fixed; min-height: 1000px; 
-  height: 1000px; 
-  margin: 0 auto; 
-  width: 100%; 
-  max-width: 1920px; 
-  position: relative; 
-  -webkit-box-shadow: 0 0 50px rgba(0,0,0,0.8);
-  box-shadow: 0 0 50px rgba(0,0,0,0.8);
-}
-
-#three article { 
-  height: 458px; 
-  position: absolute; 
-  text-align: center; 
-  top: 150px; 
-  width: 100%; 
-}
-
-#four { 
-  background: url("http://placekitten.com/800/800") 50% 0 repeat fixed; min-height: 1000px; 
-  height: 1000px; 
-  margin: 0 auto; 
-  width: 100%; 
-  max-width: 1920px; 
-  position: relative; 
-  -webkit-box-shadow: 0 0 50px rgba(0,0,0,0.8);
-  box-shadow: 0 0 50px rgba(0,0,0,0.8);
-}
-
-
-#four article { 
-  height: 458px; 
-  position: absolute; 
-  text-align: center; 
-  top: 150px; 
-  width: 100%; 
-}
-
